# freedrive

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  index.html  stars.json  styles.css  update.sh
.cursor/rules/: mobile-apk-build.mdc
.github/workflows/: ci-desktop.yml  docker-publish.yml  pages.yml  release-desktop.yml  release.yml
cmd/freedrive/: main.go
cmd/freedrive/web/: index.html
desktop/: README.md  index.html  package-lock.json  package.json
desktop/scripts/: dev.cmd  generate-app-icon.mjs
desktop/src/: App.tsx  types.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: account_crypto.rs  auth_store.rs  blocking.rs  commands.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
desktop/src-tauri/src/api/: client.rs  mod.rs  types.rs
desktop/src-tauri/src/cfapi/: callbacks.rs  connection.rs  mod.rs  placeholders.rs  register.rs  shell_register.rs  util.rs
desktop/src-tauri/src/my_drive/: cleanup.rs  mod.rs  provider.rs  sync.rs
desktop/src-tauri/src/sync/: apply.rs  engine.rs  journal.rs  log.rs  mod.rs  reconcile.rs  suppress.rs  watcher.rs
desktop/src-tauri/windows/: hooks.nsh
desktop/src/api/: tauri.ts
desktop/src/components/: AboutDialog.tsx  EncryptionSettingsPanel.tsx  ExplorerIntegrationPanel.tsx  FreeDriveTab.tsx  Logo.tsx  MyComputerTab.tsx  NavIcons.tsx  NotificationMiniCard.tsx  PreferencesHeader.tsx  PreferencesSettingsPage.tsx  PreferencesSidebar.tsx  ProfileMenu.tsx  SettingsMenu.tsx  (+5 more)
docs/: api.md  desktop-api.md  index.html  install.sh  stars.json  styles.css
internal/adminsettings/: backup_scheduler.go  policy.go  settings.go  settings_test.go
internal/api/: router.go
internal/config/: config.go
internal/domain/: activity.go  approval.go  comment.go  computer.go  crypto.go  email_2fa.go  email_change.go  file.go  folder.go  password_reset.go  search.go  session.go  share.go  sync_change.go  upload_session.go  user.go
internal/email/: smtp.go
internal/repository/: interfaces.go
internal/service/: access_service.go  access_service_test.go  auth_service.go  auth_session_test.go  computer_service.go  computer_service_test.go  crypto_service.go  crypto_service_test.go  file_service.go  folder_create_test.go  folder_service.go  password_reset_service.go  password_reset_service_test.go  share_service.go  sync_change_service.go  sync_change_service_test.go  twofa_service.go
internal/storage/: disk.go
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json
mobile/scripts/: build-apk.ps1  generate-assets.mjs
mobile/src/: theme.ts
scripts/: install.sh  update.sh
(+121 files in other folders)
