[package]
name = "freedrive-desktop"
version = "0.1.0"
description = "FreeDrive Desktop Sync Client"
authors = ["marci"]
edition = "2021"

[lib]
name = "freedrive_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "custom-protocol"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "7"
notify-debouncer-full = "0.4"
pbkdf2 = "0.12"
sha2 = "0.10"
keyring = { version = "3", features = ["windows-native"] }
dirs = "6"
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
thiserror = "2"
parking_lot = "0.12"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
winreg = "0.55"
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_CloudFilters",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_IO",
    "Win32_System_CorrelationVector",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
